# game-generic

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
data/: tiles.json
source/: main.cpp
